# codiet-shared

./: CLAUDE.md  pyproject.toml
.claude/: settings.local.json
src/codiet_shared/: constants.py  utils.py
src/codiet_shared/dtos/: __init__.py  calories.py  calories_dtos.py  cost.py  cost_dtos.py  dto_predicates.py  ingredient_dtos.py  ingredients.py  nutrient_dtos.py  nutrients.py  quantities.py  quantity_dtos.py  recipe_dtos.py  recipes.py  tag_dtos.py  tags.py  utils.py
src/codiet_shared/exceptions/: __init__.py  calories.py  common.py  cost.py  ingredients.py  nutrients.py  quantities.py  recipes.py  tags.py
src/codiet_shared/protocols/: __init__.py  calories.py  cost.py  ingredients.py  nutrients.py  quantities.py  recipes.py  tags.py
tests/: __init__.py  conftest.py
tests/dtos/: test_quantities_dto.py
tests/fixtures/: __init__.py  quantities.py
