[project]
name = "codiet-shared"
version = "0.1.0"
description = "Shared protocols and exceptions for codiet projects"
authors = [
    {name = "James Izzard",email = "jamesaizzard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
